--- a/style.css
+++ b/style.css
@@ -73,3 +73,20 @@ body{
     border: 1px solid var(--red);
     color: var(--red);
 }
+h1.intro{
+    padding-top: 0.5rem;
+    font-size: 3rem;
+}
+h3.intro{
+    font-style:italic ;
+    padding-top: 0.5rem;
+    font-size: 1.5rem;
+}
+
+.submitbutton:hover{
+    background-color: white;
+}
+
+.intro{
+    padding: 1rem;
+}
